changed button text size, change button spacing, made header fixed width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,16 @@
   border-color: #000000;
 }
 
+#overview,
+#investments,
+#goals,
+#loans,
+#social,
+#settings {
+  border-radius: 5px;
+  font-size: 20px;
+}
+
 .navigation {
   height: 100%;
   display: flex;
